Fixed multiple bugs: Images get broken in new Chapter. Firefox can only download 26 Chapters befor InternalError: too much recursion. If Epub has no cover img the first image is displayed as cover img. imptovements: Save Cover image in storage so it doesn't need to be read from the Epub each time it renders. Warning if Story URL different than original epub URL. hide/ prevent error getBytesInUse in firefox option to merge epubs use language json option to change Additional metadata load source url from uploaded epub

--- a/plugin/css/default.css
+++ b/plugin/css/default.css
@@ -200,7 +200,10 @@ button {
 
 .LibCover {
     max-height: 115.5px;
-    min-width: 106.5px;
+    max-width: 106.5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .HiddenButtonSection {
